examples/errors/stack_underflow.pigsh
# 错误：空栈执行 pop
pop x
